--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </head>
   <body>
     <div class="card">
-      <h1>يا تانو 😄</h1>
+      <h1>يا تنو 😄</h1>
       <p>
         "بس دايرك لمن تزعلي ولا تفرحي، تتذكريني كده ساي… الزول دا كان بيونسني
         ساي 😂 😌 يمكن تضحكي ساي وتقولِي: الزول دا لسه ما اتغير 😂"
